fix/position absolute on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ a, a:hover {
 /******** begin modals *********/
 
 .modal-card {
+    position: relative;
     margin-right: 2.5rem;
     margin-top: 5rem;
     padding: 0;
